# finance-bot

./: bot.py  pyproject.toml
